# rust_chess

./: .gitignore  Cargo.toml  LICENSE  README.md  bench_results.md  build_web.sh  endgame_bench.sh  serve_coop.py
.cargo/: config.toml
.claude/: settings.local.json
.trunk/: trunk.yaml
chess/: Cargo.toml  build.rs
chess/src/: board.rs  board_accessories.rs  chess_event_handler.rs  clock_ui.rs  embed_plugin.rs  game_events.rs  game_over_ui.rs  game_resources.rs  input_plugin.rs  keyboard_input.rs  main.rs  material_ui.rs  opening_name_ui.rs  piece_animator.rs  piece_picker.rs  pieces.rs  preload_assets_plugin.rs  sound.rs  start_screen_ui.rs
chess_board/: Cargo.toml
chess_board/src/: chessboard.rs  fen.rs  lib.rs  zobrist.rs
chess_evaluation/: Cargo.toml
chess_evaluation/src/: alpha_beta.rs  board_evaluation.rs  classical_eval.rs  lib.rs  neural_eval.rs  opening_book.rs  opening_book_data.rs  pawn_table.rs  piece_tables.rs  see.rs  transposition_table.rs
chess_foundation/: Cargo.toml
chess_foundation/src/: bitboard.rs  board_helper.rs  chess_move.rs  coord.rs  lib.rs  piece.rs  piece_directions.rs
chess_uci/: Cargo.toml
chess_uci/src/: main.rs
move_generator/: Cargo.toml  perft_test_results.txt
move_generator/src/: bitboard.rs  lib.rs  magic.rs  magic_bitboards.rs  magic_constants.rs  magics_generator.rs  masks.rs  move_generator.rs  move_patterns.rs  piece_conductor.rs  piece_patterns.rs  san_to_move.rs
nn_training/: .gitignore  README.md  convert_openings.py  requirements.txt
nn_training/configs/: default.yaml  finetune.yaml  halfkp.yaml  halfkp_10m.yaml  halfkp_dual.yaml  halfkp_dual_20m.yaml  halfkp_dual_21m_1bucket.yaml  halfkp_dual_21m_endgame_ft.yaml  halfkp_dual_all_25m.yaml  halfkp_dual_all_31m.yaml  halfkp_dual_all_37m_1024.yaml  halfkp_dual_balanced.yaml  halfkp_finetune_1m.yaml
nn_training/nnue_train/: __init__.py  dataset.py  features.py  model.py
nn_training/scripts/: analyze_dataset.py  export_onnx.py  export_weights.py  gen_balanced_dataset.sh  gen_finetune_data.sh  generate_data.py  make_dataset.py  preprocess_dataset.py  selfplay_loop.py  split_dataset.py  train.py
nn_training/tests/: test_dual.py  test_model.py
nnue_preprocess/: Cargo.toml
nnue_preprocess/src/: main.rs
perft/: Cargo.toml
perft/src/: main.rs
pgn_extract/: Cargo.toml
pgn_extract/src/: finetune_extract.rs  main.rs
self_play/: Cargo.toml
self_play/src/: main.rs
tools/: play_vs_stockfish.py
web/wasm/: chess.d.ts  chess.js  chess_bg.wasm.d.ts  index.html
