[workspace]
members = [
    "chess", "perft", "move_generator", "chess_board", "chess_foundation", "chess_evaluation"
]
resolver = "2"

[profile.release]
strip = true
lto = true
opt-level = 3

[profile.wasm-release]
# Use release profile as default values
inherits = "release"
# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"
# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
# lto = "fat"
# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
# codegen-units = 1