[workspace]
members = [
    "chess", "chess_uci", "self_play", "perft", "move_generator", "chess_board", "chess_foundation", "chess_evaluation", "pgn_extract", "nnue_preprocess"
]
resolver = "2"

# ── Eval-mode selector ─────────────────────────────────────────────────────────
# Change the ONE feature here to switch the evaluation backend for:
#   chess_uci, self_play, and bench (they all read this via `workspace = true`)
# The chess app is independent (always nn-incremental, weights embedded).
#
# Options (pick exactly one):
#   "classical-eval"  — hand-crafted HCE only, no NN code compiled
#   "nn-full-forward" — full NN forward pass per call, no runtime checks
#   "nn-incremental"  — incremental i16 accumulator in search (fastest NN mode)
#   "runtime-switch"  — HCE + NN toggled via UCI setoptions / set_neural_eval_enabled()
[workspace.dependencies]
chess_evaluation = { path = "chess_evaluation", default-features = false, features = ["runtime-switch"] }

[profile.release]
strip = true
# lto = true
opt-level = 3

[profile.wasm-release]
# Use release profile as default values
inherits = "release"
# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"
# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
# lto = "fat"
# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
# codegen-units = 1