[package]
name = "chess"
version = "0.1.0"
edition = "2021"
# build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chess_board = { path = "../chess_board" }
move_generator = { path = "../move_generator" }
chess_foundation = { path = "../chess_foundation" }
chess_evaluation = { path = "../chess_evaluation" }
bevy = "0.13"
bevy_tweening = "0.10.0"
bevy-fps-counter = "0.4.0"
rand = "0.8.4"

