[package]
name = "chess"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chess_board = { path = "../chess_board" }
move_generator = { path = "../move_generator" }
chess_foundation = { path = "../chess_foundation" }
chess_evaluation = { path = "../chess_evaluation" }
bevy_tweening = "0.10.0"
bevy-fps-counter = "0.4.0"
rand = "0.8.4"
web-sys = { version = "0.3.67", default-features = false, features = ["Window"] }
bevy = { version = "0.13", default-features = false, features = [
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_winit",
  "bevy_asset",
  "bevy_sprite",
  "bevy_pbr",
  "bevy_audio",
  "bevy_winit"
] }


# [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
# version = "0.3"
# default-features = false
# features = ["Window"]