[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
chess_board = { path = "../chess_board" }
move_generator = { path = "../move_generator" }
chess_foundation = { path = "../chess_foundation" }
chess_evaluation = { path = "../chess_evaluation" }
bevy_tweening = "0.15"
bevy-fps-counter = "0.9.0"
rand = "0.8.4"
web-sys = { version = "0.3.67", default-features = false, features = ["Window"] }
bevy = { version = "0.18", default-features = false, features = [
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_winit",
  "bevy_asset",
  "bevy_sprite",
  "bevy_pbr",
  "bevy_audio",
] }
bevy_async_task = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
bevy = { version = "0.18", default-features = false, features = ["webgl2"] }
