[package]
name = "chess_evaluation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess_foundation = { path = "../chess_foundation" }
chess_board = { path = "../chess_board" }
move_generator = { path = "../move_generator" }
rand = "0.8"
rayon = "1.8"
web-time = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
