[package]
name = "chess_evaluation"
version = "0.1.0"
edition = "2021"

[features]
# Select exactly one evaluation backend.
# classical-eval is the default so tests, bench, self_play, and chess_uci
# continue working without any changes to their Cargo.toml.
# The chess (Bevy) app overrides with default-features=false, features=["nn-incremental"].
# Default for the bench binary (cargo run --bin bench).
# chess_uci / self_play override this via [workspace.dependencies].
default = ["runtime-switch"]
classical-eval  = []   # hand-crafted HCE only — no NN compiled in
nn-full-forward = []   # full NN forward pass, no runtime enable/disable check
nn-incremental  = []   # incremental i16 accumulator in search, full forward elsewhere
runtime-switch  = ["classical-eval"]   # original behaviour: HCE + NN, toggled at runtime via set_neural_eval_enabled()
                       # used by chess_uci so EvalFile / NeuralEval setoptions keep working

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[dependencies]
chess_foundation = { path = "../chess_foundation" }
chess_board = { path = "../chess_board" }
move_generator = { path = "../move_generator" }
rand = "0.8"
rayon = "1.8"
web-time = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
