[package]
name = "move_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess_foundation = { path = "../chess_foundation" }
chess_board = { path = "../chess_board" }
rand = "0.8.4"
nalgebra = "0.32.4"
rayon = "1.8.1"