[package]
name = "self_play"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "self_play"
path = "src/main.rs"

[features]
default         = ["nn-incremental"]
classical-eval  = []
nn-full-forward = []
nn-incremental  = []
runtime-switch  = []

[dependencies]
chess_board      = { path = "../chess_board" }
chess_evaluation = { workspace = true }
chess_foundation = { path = "../chess_foundation" }
move_generator   = { path = "../move_generator" }
